2007-04-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalUserRightsEditor.[hm]: new component class
	module and subclass of UIxUserRightsEditor specific to the
	handling of user rights on calendar folders.

2007-04-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -groupDavResourceType]): return both
	"vevent-collection" and "vtodo-collection".

	* UI/Common/UIxUserRightsEditor.[hm]: new template class module
	that implements the detailed editor of user rights per-object.

2007-04-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser
	-rolesForObject:objectinContext:context]): no longer query objects
	for "roleForUser:". Instead, all objects should implement
	"rolesForUser:".

	* SoObjects/SOGo/SOGoContentObject.m ([SOGoContentObject -acls]):
	new method to comply with the new acl "protocol" in SOGoObject.
	Uses SOGoFolder's new facilities for ACLS.
	([SOGoContentObject -aclsForUser:uid]): idem.
	([SOGoContentObject -setRoles:rolesforUser:uid]): idem.
	([SOGoContentObject -removeAclsForUsers:users]): idem.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
	-aclsForObjectAtPath:objectPathArray]): new method generic to GCS
	based folders. This method is derived from the code that was in
	UIxAclFolder before its removal.
	([SOGoFolder -aclsForUser:uidforObjectAtPath:objectPathArray]):
	idem.
	([SOGoFolder
	-removeAclsForUsers:usersforObjectAtPath:objectPathArray]): idem.
	([SOGoFolder
	-setRoles:rolesforUser:uidforObjectAtPath:objectPathArray]): idem.
	([SOGoFolder -setRoleForUsers:uidsto:role]) 
	([SOGoFolder -setRoleForUsers:uidsto:role]): removed method.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -acls]): stub method
	that requires overriding by subclasses.
	([SOGoObject -aclsForUser:uid]): idem.
	([SOGoObject -defaultAclRoles]): idem.
	([SOGoObject -setRoles:rolesforUser:uid]): idem.
	([SOGoObject -removeAclsForUsers:users]): idem.
